Scrollable sidebar working, need to fix the scrollbar hide on mozilla

--- a/react-app/sass/extended/_common.scss
+++ b/react-app/sass/extended/_common.scss
@@ -1,9 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
+    -ms-overflow-style: none;
+    ::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .pointer {
     cursor: pointer;
+}
+
+#sidebar, #main {
+    display: inline-block;
 }
